--- a/index.html
+++ b/index.html
@@ -20,46 +20,46 @@
             <th>Viernes</th>
         </tr>
         <tr>
-            <td><a class="nombreClase">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
-            <td><a class="nombreClase">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
-            <td><a class="nombreClase">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
-            <td><a class="nombreClase">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
-            <td><a class="nombreClase">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
+            <td><a class="nombreClase" href="https://us02web.zoom.us/j/89243137251?pwd=dUJob05BVGtVOHllUGtNaEtmR1Jqdz09#success" target="_blank">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
+            <td><a class="nombreClase" href="https://us02web.zoom.us/j/89243137251?pwd=dUJob05BVGtVOHllUGtNaEtmR1Jqdz09#success" target="_blank">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
+            <td><a class="nombreClase" href="https://us02web.zoom.us/j/89243137251?pwd=dUJob05BVGtVOHllUGtNaEtmR1Jqdz09#success" target="_blank">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
+            <td><a class="nombreClase" href="https://us02web.zoom.us/j/89243137251?pwd=dUJob05BVGtVOHllUGtNaEtmR1Jqdz09#success" target="_blank">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
+            <td><a class="nombreClase" href="https://us02web.zoom.us/j/89243137251?pwd=dUJob05BVGtVOHllUGtNaEtmR1Jqdz09#success" target="_blank">Programacion Orientada a Objetos</a><a class="hora"><br>1500-1600</a></td>
         </tr>
         <tr>
-            <td><a class="nombreClase">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
-            <td><a class="nombreClase">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
-            <td><a class="nombreClase">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
-            <td><a class="nombreClase">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
+            <td><a class="nombreClase" href="" target="_blank">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
+            <td><a class="nombreClase" href="" target="_blank">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
+            <td><a class="nombreClase" href="" target="_blank">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
+            <td><a class="nombreClase" href="" target="_blank">Contabilidad Financiera</a><a class="hora"><br>1600-1700</a></td>
             <td class="libre"><a>Libre</a><a class="hora"><br>1600-1700</a></td>
         </tr>
         <tr>
-            <td><a class="nombreClase">Quimica</a><a class="hora"><br>1700-1800</a></td>
-            <td><a class="nombreClase">Quimica</a><a class="hora"><br>1700-1800</a></td>
-            <td><a class="nombreClase">Quimica</a><a class="hora"><br>1700-1800</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/upf-prwe-yvv?pli=1" target="_blank">Quimica</a><a class="hora"><br>1700-1800</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/upf-prwe-yvv?pli=1" target="_blank">Quimica</a><a class="hora"><br>1700-1800</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/upf-prwe-yvv?pli=1" target="_blank">Quimica</a><a class="hora"><br>1700-1800</a></td>
             <td class="libre"><a>Libre</a><a class="hora"><br>1700-1800</a></td>
             <td class="libre"><a>Libre</a><a class="hora"><br>1700-1800</a></td>
         </tr>
         <tr>
             <td class="libre"><a>Libre</a><a class="hora"><br>1800-1900</a></td>
             <td class="libre"><a>Libre</a><a class="hora"><br>1800-1900</a></td>
-            <td><a class="nombreClase">Calculo Integral</a><a class="hora"><br>1800-1900</a></td>
-            <td><a class="nombreClase">Calculo Integral</a><a class="hora"><br>1800-1900</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/twe-shaw-cwq" target="_blank">Calculo Integral</a><a class="hora"><br>1800-1900</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/twe-shaw-cwq" target="_blank">Calculo Integral</a><a class="hora"><br>1800-1900</a></td>
             <td class="libre"><a>Libre</a><a class="hora"><br>1800-1900</a></td>
         </tr>
         <tr>
-            <td><a class="nombreClase">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
-            <td><a class="nombreClase">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
-            <td><a class="nombreClase">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
-            <td><a class="nombreClase">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/prg-nseh-jxt" target="_blank">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/prg-nseh-jxt" target="_blank">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/prg-nseh-jxt" target="_blank">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/prg-nseh-jxt" target="_blank">Probabilidad y Estadistica</a><a class="hora"><br>1900-2000</a></td>
             <td class="libre"><a>Libre</a><a class="hora"><br>1900-2000</a></td>
         </tr>
         <tr>
-            <td><a class="nombreClase">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
-            <td><a class="nombreClase">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
-            <td><a class="nombreClase">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
-            <td><a class="nombreClase">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
-            <td><a class="nombreClase">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/air-kinm-tqx" target="_blank">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/air-kinm-tqx" target="_blank">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/air-kinm-tqx" target="_blank">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/air-kinm-tqx" target="_blank">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
+            <td><a class="nombreClase" href="https://meet.google.com/air-kinm-tqx" target="_blank">Algebra Lineal</a><a class="hora"><br>2000-2100</a></td>
         </tr>
     </table>
 </body>
